# fmri-findviz

./: .gitignore  LICENSE  README.md  cypress.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py
.cursor/rules/: findviz-cursor-rule.mdc
.github/workflows/: publish.yml  test.yml
app/: __init__.py
app/routes/: __init__.py  common.py  gifti.py  nifti.py
app/static/components/: timeCourse.html  uploadModal.html  visualizationOptions.html
app/static/css/: styles.css
app/static/js/: nifti.js  user.js  viewer.js
cypress/fixtures/samples/: create_test_data.py  sample_cifti.dtseries.nii  sample_func_v10iso_t20_scene.fvstate  sample_left.func.gii  sample_left.surf.gii  sample_left_v100.surf.gii  sample_left_v100_scene.fvstate  sample_left_v100_t20.func.gii  sample_left_v100_t30.func.gii  sample_left_v50.surf.gii  sample_right.func.gii  sample_right_20.func.gii  sample_right_30.func.gii  sample_right_v100_t20.func.gii  sample_right_v100_t30.func.gii  sample_taskdesign.csv  sample_taskdesign_missing_onset.csv  sample_taskdesign_string_onset.csv  sample_timeseries.csv  sample_timeseries_t20.csv  sample_timeseries_t20_2.csv  sample_timeseries_t20_header.csv  sample_timeseries_t30.csv
cypress/integration/analysis/: average.js  correlate.js  distance.js  peak_finder_spec.js
cypress/integration/navigation/: gifti_navigation_spec.js  nifti_navigation_spec.js  timeseries_navigation_spec.js
cypress/integration/preprocessing/: gifti_preprocessing_spec.js  nifti_preprocessing_spec.js  timeseries_preprocessing_spec.js
cypress/integration/upload/: cifti_upload_error_spec.js  cifti_upload_spec.js  gifti_upload_error_spec.js  gifti_upload_spec.js  nifti_upload_error_spec.js  nifti_upload_spec.js  task_design_upload_error_spec.js  task_design_upload_spec.js  timeseries_upload_error_spec.js  timeseries_upload_spec.js
cypress/plugins/: index.js
cypress/support/: commands.js  testConstants.js
docs/: Gemfile  _config.yml  analysis.md  file-upload.md  index.md  navigation.md  preprocessing.md
docs/_includes/: head-custom.html
docs/_layouts/: default.html
docs/assets/css/: style.scss
findviz/: __init__.py  analysis.py  cli.py  cypress.json  jest.config.js  logger_config.py
findviz/routes/: __init__.py  common.py  file.py  gifti.py  main.py  nifti.py  preprocess.py  shared.py  utils.py
findviz/templates/: analysis.html  correlate.html  index.html  results.html
findviz/viz/: __init__.py  analysis.py  exception.py  transforms.py
tests/: __init__.py  test_cli.py
tests/routes/: conftest.py  test_file.py  test_utils.py
tests/viz/: __init__.py  conftest.py  test_exception.py  test_transforms.py
(+213 files in other folders)
