[tool.poetry]
name = "findviz"
version = "0.1.0"
description = "FIND Viewer: FMRI Interactive Navigation and Discovery Viewer"
readme = "README.md"
license = "MIT"
authors = ["Taylor Bolt <taylor.s.bolt@gmail.com>"]

# Dependencies
[tool.poetry.dependencies]
python = "^3.9"
Flask = "3.0.3"
matplotlib = "3.9.2"
nilearn = "0.10.4"
plotly = "5.23.0"

# Development dependencies (add as needed)
[tool.poetry.dev-dependencies]
pytest = "^7.0"

# Scripts
[tool.poetry.scripts]
findviz = "findviz.cli:main"
